# django-practice

./: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini
app/: admin.py
app/migrations/: 0001_initial.py
app/models/: __init__.py  base.py  user.py
app/tests/: __init__.py
project/: settings.py  urls.py
