[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = "django practice project"
authors = ["Kangho Kenneth Yoon <yoonkangho@gmail.com>"]
readme = "README.md"
packages = [{include = "django_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
