[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = "django practice project"
authors = ["Kangho Kenneth Yoon <yoonkangho@gmail.com>"]
readme = "README.md"
packages = [{include = "django_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
black = "^22.8.0"
drf-spectacular = "^0.24.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
