[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = "django practice project"
authors = ["Kangho Kenneth Yoon <yoonkangho@gmail.com>"]
readme = "README.md"
packages = [{include = "django_practice"}]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.0"
djangorestframework = "^3.15.0"
drf-spectacular = "^0.27.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"
ruff = "^0.3.3"

[tool.ruff]
exclude = [".venv"]
line-length = 120
extend-select = ["Q"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
